Merged hauhoa into anphu